feat : deploy user activation
