# src/controllers/auth.controller.ts
@@ -23,12 +23,26 @@ const registerValidateSchema = Yup.object({
     fullName        : Yup.string().required(),
     username        : Yup.string().required(),
     email           : Yup.string().required(),
-    password        : Yup.string().required(),
+    password        : Yup.string().required().min(6, "Password must be at least 6 characters")
+    .test("at-least-on-uppercast-letter","Contains at least one uppercase letter", (value) => {
+        if(!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+    })
+    .test("at-least-on-number","Contains at least one number", (value) => {
+        if(!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+    }),
     confirmPassword : Yup.string().required().oneOf([Yup.ref('password'), ""], "Password not matched"),
 });
 
 export default {
     async register ( req:Request, res:Response) {
+        /**
+        #swagger.tags = ['Auth']
+         */
+
         const { fullName, username, email, password, confirmPassword} = 
             req.body as unknown as TRegister;
 
@@ -58,6 +72,7 @@ export default {
     async login(req:Request, res:Response) {
         
         /**
+        #swagger.tags = ['Auth']
         #swagger.requestBody = {
             require : true,
             schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -76,6 +91,7 @@ export default {
                     username: identifier
                     },
                 ],
+                isActive : true,
             });
 
             if(!userByIdentifier) {
@@ -115,6 +131,7 @@ export default {
 
     async me (req:IReqUser, res:Response) {
         /**
+        #swagger.tags = ['Auth']
         #swagger.security = [{
             "bearerAuth" : []
         }]
@@ -132,6 +149,43 @@ export default {
             res.status(400).json({
                 message : err.message,
                 data    : null,
+            });
+        }
+    },
+
+    async activation(req:Request, res:Response) {
+        /**
+        #swagger.tags = ["Auth"]
+        #swagger.requestBody = {
+            require : true,
+            schema  :{$ref:'#/components/schemas/ActivationRequest'}
+        }
+        */
+        
+        try {
+            const {code} = req.body as {code:string};
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode : code,
+                },
+                {
+                    isActive : true,
+                },
+                {
+                    new : true,
+                }
+            );
+            res.status(200).json({
+                message : "User successfully activated",
+                data : user,
+            });
+
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message : err.message,
+                data : null,
             });
         }
     },
