# src/models/user.model.ts
@@ -1,6 +1,9 @@
 import mongoose from "mongoose";
 import { encryp } from "../utils/encryption";
 
+import {renderMailHtml, sendMail} from "../utils/mail/mail"; 
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
+
 export interface User {
     fullName        : string;
     username        : string;
@@ -10,6 +13,7 @@ export interface User {
     profilePicture  : string;
     isActive        : boolean;
     activationCode  : string;
+    createdAt?      : string;
 }
 
 const Schema = mongoose.Schema;
@@ -22,10 +26,13 @@ const UserSchema = new Schema<User>({
     username: {
         type: Schema.Types.String,
         required: true,
+        unique : true,
     },
     email: {
         type: Schema.Types.String,
         required: true,
+        unique : true,
+
     },
     password: {
         type: Schema.Types.String,
@@ -55,7 +62,33 @@ const UserSchema = new Schema<User>({
 UserSchema.pre("save", function (next) {
     const user = this;
     user.password = encryp(user.password);
+    user.activationCode = encryp(user.id);
     next();
+});
+
+UserSchema.post("save", async function(doc, next) {
+    try {
+        const user = doc;
+        console.log("send email to : ", user.email);
+        const contentMail = await renderMailHtml("registration-success.ejs", {
+            username : user.username,
+            fullName : user.fullName,
+            email    : user.email,
+            createdAt: user.createdAt,
+            activationLink : `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
+        });
+
+        await sendMail({
+            from    : EMAIL_SMTP_USER,
+            to      : user.email,
+            subject : "Aktivasi Akun Anda",
+            html    : contentMail,
+        });
+    } catch (error) {
+        console.log("error > ", error);
+    } finally {
+        next();
+    }
 });
 
 UserSchema.methods.toJSON = function () {
